# GTLC

./: .gitignore  GTLC.cabal  LICENSE  ProjectReport.tex  README.md  STLC.cabal  package.yaml  stack.yaml
Project Report/: Appendix.tex  BlameAssignment.tex  Coercion.tex  Conclusion.tex  Copyright.tex  Example.tex  GTLC.tex  Interpreter.tex  Introduction.tex  ProjectReport.tex  RelatedWork.tex  TitlePage.tex
Project Report/code/: Evaluator.tex  Typecheck.tex
Project Report/figures/: CastInsertion.tex  Coercion.tex  Consistency.tex  Reduction.tex  Semantics.tex  Subtype.tex  TypeSystem.tex
app/: Main.hs
src/: CastInserter.hs  Coercion.hs  Error.hs  Errors.hs  Eval.hs  Evaluator.hs  GlobalState.hs  Lexer.hs  ParseHelper.hs  ParseUtils.hs  Parser.hs  Prettier.hs  Pretty.hs  StoreEnv.hs  Subtype.hs  Syntax.hs  Type.hs  TypeChecker.hs  TypeErrors.hs  TypeParser.hs  Types.hs  Utils.hs
test/: CastInsertionSpec.hs  CoercionSpec.hs  EvalSpec.hs  EvaluatorSpec.hs  InterpretSpec.hs  ParseSpec.hs  ParserSpec.hs  PrintSpec.hs  PrinterSpec.hs  Spec.hs  SpecHelper.hs  SubtypeSpec.hs  SubtyperSpec.hs  TypeCheckSpec.hs  TypeCheckerSpec.hs
