name:                GTLC
version:             0.1.0.0
synopsis:            Intepretation of Gradually Typed Lambda Calculus
description:         Please see README.md
homepage:            https://github.com/thuytien140894/GTLC
license:             BSD3
license-file:        LICENSE
author:              Tien Thuy Ho
maintainer:          thuytien140894@gmail.com
copyright:           2018 Tien Thuy Ho
category:            Interpreter
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Evaluator
                     , Parser
                     , Lexer
                     , Prettier
                     , Syntax
                     , Types
                     , Errors
                     , TypeChecker
                     , Subtype
                     , ParseHelper
                     , TypeParser
                     , Coercion
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2 && < 3.0
                     , filepath >= 1.3 && < 1.5
                     , text >= 1.1 && < 1.5
                     , pretty >= 1.1 && < 1.2
                     , process >= 1.1 && < 1.7
                     , directory >= 1.2 && < 1.4
                     , haskeline >= 0.7 && < 0.8
                     , containers >= 0.5 && < 0.6
                     , parsec >= 3.1 && < 3.2
                     , transformers >= 0.4 && < 0.6
                     , hspec >= 2.2 && < 2.5
  default-language:    Haskell2010

executable GTLC-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , filepath
                     , text
                     , pretty
                     , process
                     , directory
                     , haskeline
                     , containers
                     , parsec
                     , transformers
                     , hspec
                     , GTLC
  default-language:    Haskell2010

test-suite GTLC-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       CoercionSpec
                     , CastInsertionSpec
                     , EvaluatorSpec
                     , ParserSpec
                     , PrinterSpec
                     , SubtyperSpec
                     , TypeCheckerSpec
  build-depends:       base
                     , hspec >= 2.2
                     , GTLC
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/thuytien140894/GTLC
