name:                STLC
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/MyProject#readme
license:             BSD3
license-file:        LICENSE
author:              Tien Thuy Ho
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Eval, Parser, Lexer, Pretty, Syntax
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2 && < 3.0
                     , filepath >= 1.3 && < 1.5
                     , text >= 1.1 && < 1.5
                     , pretty >= 1.1 && < 1.2
                     , process >= 1.1 && < 1.5
                     , directory >= 1.2 && < 1.3
                     , haskeline >= 0.7 && < 0.8
                     , containers >= 0.5 && < 0.6
                     , parsec >= 3.1 && < 3.2
                     , transformers >= 0.4 && < 0.6
  default-language:    Haskell2010

executable STLC-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , filepath
                     , text
                     , pretty
                     , process
                     , directory
                     , haskeline
                     , containers
                     , parsec
                     , transformers
                     , STLC
  default-language:    Haskell2010

test-suite STLC-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec >= 2.2
                     , STLC
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/MyProject
