name:                STLC
version:             0.1.0.0
synopsis:            Implementation of Simply Typed Lambda Calculus
description:         Please see README.md
homepage:            https://github.com/thuytien140894/Simply-Typed-Lambda-Calculus
license:             BSD3
license-file:        LICENSE
author:              Tien Thuy Ho
maintainer:          thuytien140894@gmail.com
copyright:           2017 Tien Thuy Ho
category:            Interpreter
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Evaluator
                     , Parser
                     , Lexer
                     , Prettier
                     , Syntax
                     , Types
                     , TypeErrors
                     , TypeChecker
                     , Subtype
                     , ParseHelper
                     , TypeParser
                     , Coercion
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2 && < 3.0
                     , filepath >= 1.3 && < 1.5
                     , text >= 1.1 && < 1.5
                     , pretty >= 1.1 && < 1.2
                     , process >= 1.1 && < 1.5
                     , directory >= 1.2 && < 1.3
                     , haskeline >= 0.7 && < 0.8
                     , containers >= 0.5 && < 0.6
                     , parsec >= 3.1 && < 3.2
                     , transformers >= 0.4 && < 0.6
                     , hspec >= 2.2 && < 2.3
  default-language:    Haskell2010

executable STLC-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , filepath
                     , text
                     , pretty
                     , process
                     , directory
                     , haskeline
                     , containers
                     , parsec
                     , transformers
                     , hspec
                     , STLC
  default-language:    Haskell2010

test-suite STLC-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       CoercionSpec
                     , EvaluatorSpec
                     , ParserSpec
                     , PrinterSpec
                     , SubtyperSpec
                     , TypeCheckerSpec
  build-depends:       base
                     , hspec >= 2.2
                     , STLC
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/thuytien140894/Simply-Typed-Lambda-Calculus
